@@ -20,6 +20,7 @@ gnome-commander 1.2.8.4
 
 Bug fixes:
  * Fixed problem #602916 (not working menu entry)
+ * Fixed problem #603301 (crash when cancelling symlink creation by ESC)
  * Fixed Ubuntu problem #369818 (incorrect sorting by size in panel)
  * Fixed problem with not working keypad enter in copy/move dialog
  * Fixed problem with stalled keyboard after ALT+1/2 with hidden device list
